added error checks, blanks for details, bugfixes